CSS 119361: Investigate reveal box layout issue - fix text overlay

--- a/src/main/resources/static/shiba.css
+++ b/src/main/resources/static/shiba.css
@@ -480,7 +480,7 @@ form .drag-and-drop-box-compact {
 }
 
 .reveal__link-adjacent {
-  width: 100%;
+  width: 93%;
   border: unset;
 }
 
